Improvements and bug fixes.

Warning: Spec::Rails users: In fixing 11508, we've removed the raise_controller_errors method. As long as you
follow the upgrade instructions and run 'script/generate rspec' you'll be fine, but if you skip this
step you need to manually go into spec_helper.rb and remove the call to that method (if present - it
might not be if you haven't upgraded in a while).

* Applied [#12156] smooth open mate patch (Patch from Ienaga Eiji)
* Applied [#10577] Rails with Oracle breaks 0.9.2. (Patch from Sinclair Bain)
* Fixed [#12079] auto-generated example name incomplete: should have 1 error on ....]
* Applied [#12066] Docfix for mocks/mocks.page (Patch from Kyle Hargraves)
* Fixed [#11891] script/generate rspec_controller fails to create appropriate views (from templates) on edge rails
* Applied [#11921] Adds the correct controller_name from derived_controller_name() to the ViewExampleController (Patch from Eloy Duran)
* Fixed [#11903] config.include with behaviour_type 'hash' does not work
* Examples without blocks and pending is now reported with a P instead of a *
* Pending blocks that now pass are rendered blue
* New behaviour for after: If an after block raises an error, the other ones will still run instead of bailing at the first. 
* Made it possible to run spec from RSpec.tmbundle with --drb against a Rails spec_server.
* Applied [#11868] Add ability for pending to optionally hold a failing block and to fail when it passes (Patch from Bob Cotton)
* Fixed [#11843] watir_behaviour missing from spec_ui gem
* Added 'switch between source and spec file' command in Spec::Mate (based on code from Ruy Asan)
* Applied [#11509] Documentation - RSpec requires hpricot
* Applied [#11807] Daemonize spec_server and rake tasks to manage them. (patch from Kyosuke MOROHASHI)
* Added pending(message) method
* Fixed [#11777] should render_template doesn't check paths correctly
* Fixed [#11749] Use of 'rescue => e' does not catch all exceptions