@@ -260,7 +260,8 @@ a {
     <dd class="spec failed">
       <span class="failed_spec_name">should print diff of different strings</span>
       <div class="failure" id="failure_5">
-        <div class="message"><pre>expected &quot;RSpec is a\nbehaviour driven development\nframework for Ruby\n&quot;, got &quot;RSpec is a\nbehavior driven development\nframework for Ruby\n&quot; (using ==)
+        <div class="message"><pre>expected: &quot;RSpec is a\nbehaviour driven development\nframework for Ruby\n&quot;,
+     got: &quot;RSpec is a\nbehavior driven development\nframework for Ruby\n&quot; (using ==)
 Diff:
 @@ -1,4 +1,4 @@
  RSpec is a
