@@ -6,6 +6,7 @@ follow the upgrade instructions and run 'script/generate rspec' you'll be fine, 
 step you need to manually go into spec_helper.rb and remove the call to that method (if present - it
 might not be if you haven't upgraded in a while).
 
+* Applied [#12010] Nicer failure message formatting (Patch from Wincent Colaiuta)
 * Applied [#12156] smooth open mate patch (Patch from Ienaga Eiji)
 * Applied [#10577] Rails with Oracle breaks 0.9.2. (Patch from Sinclair Bain)
 * Fixed [#12079] auto-generated example name incomplete: should have 1 error on ....]
